@@ -1,3 +1,8 @@
+Sun Aug  4 00:57:58 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (big2str_karatsuba): Don't allocate new temporary buffer
+	  if the buffer is enough for current invocation.
+
 Sun Aug  4 00:22:34 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (bary2bdigitdbl): New function.
